--- a/styles/colors.less
+++ b/styles/colors.less
@@ -1,5 +1,3 @@
-// Oliveira Syntax Theme
-
 // Color scheme -----------------------------------
 
 @dbg: #374934; // Dark background
@@ -22,28 +20,30 @@
 @cya: #5C9B85; // Cyan
 @vio: #8B85BA; // Violet
 
-// Variables -----------------------------------
+// Visual order -----------------------------------
 
-@text-1: @lt1; // text primary
-@text-2: @lt2; // text secondary
+@primary1: @yel;
+@primary2: @ora;
+@primary3: @gre;
 
-@color-1: @yel; // color primary
-@color-2: @ora; // color secondary
-@color-3: @gre; // color tertiary
+@secondary1: @cya;
+@secondary2: @blu;
 
-@support-1: @cya; // support primary
-@support-2: @blu; // support secondary
+@tertiary1: @red;
+@tertiary2: @vio;
+@tertiary3: @mag;
 
-@accent-1: @red; // accent primary
-@accent-2: @vio; // accent secondary
-@accent-3: @mag; // accent tertiary
+// Theme variant ----------------------------------
 
-// Base vars -----------------------------------
-
-@syntax-fg: @text-1; // text primary
-@syntax-accent: @accent-1; // accent primary
+@text1: @lt1; // text primary
+@text2: @lt2; // text secondary
 @syntax-bg: @lbg; // background
 @syntax-guide: @lhl; // background highlight
+
+// Atom Base vars ---------------------------------
+
+@syntax-fg: @text1; // text primary
+@syntax-accent: @tertiary1; // cursor, markdown preview links, etc.
 @syntax-selection: @syntax-guide;
 @syntax-selection-gutter: @syntax-guide;
 @syntax-cursor-line: fade(@syntax-selection, 26%); // needs to be semi-transparent to show serach results
